--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Taxa de Servico</string>
     <string name="porcentagem_inicial">1%</string>
+    <string name="tax">Tax:</string>
+    <string name="total">Total:</string>
 </resources>
